2003-04-01  Richard Henderson  <rth@redhat.com>

        * except.c (convert_from_eh_region_ranges_1): Smash REG_EH_REGION
        notes for nothrow calls if flag_forced_unwind_exceptions.
        (build_post_landing_pads): Mind flag_forced_unwind_exceptions.
        (sjlj_find_directly_reachable_regions): Likewise.
        (reachable_handlers): Likewise.
        (can_throw_external): Likewise.
        (collect_one_action_chain): Record cleanups after catch-all and
        must-not-throw if flag_forced_unwind_exceptions.
        * flags.h (flag_forced_unwind_exceptions): Declare.
        * toplev.c (flag_forced_unwind_exceptions): New.
        (lang_independent_options): Add it.
	* doc/invoke.texi: Add it.

2003-04-01  Geoffrey Keating  <geoffk@apple.com>

	* unwind-dw2-fde-darwin.c (DESTRUCTOR_MAY_BE_CALLED_LIVE): New.
	(live_image_destructor): Reset image to initial state.
	(examine_objects): Set DESTRUCTOR_MAY_BE_CALLED_LIVE.

2003-04-01  Dale Johannesen  <dalej@apple.com>

        * cse.c (count_reg_usage): Fix handling of REG_EQUAL notes.
        (Zdenek Dvorak's fix from 3.4 branch)

2003-04-01  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/s390/s390.c (s390_fixup_clobbered_return_reg):
	Do nothing if __builtin_return_address was not used.

2003-04-01  David Edelsohn  <edelsohn@gnu.org>

	* config/rs6000/rs6000.c (function_arg_pass_by_reference):
	Return true for variable sized types.
	(rs6000_va_arg): Handle variable sized types passed by reference
	on non-SVR4 ABI.

2003-03-31  Mark Mitchell  <mark@codesourcery.com>

	PR c/9936
	* c-decl.c (grokdeclarator): Clear SAVE_EXPR_CONTEXT for
	variably-sized arrays in parameters.
	(set_save_expr_context): New function.
	(c_expand_body): Use it, via walk_tree.

2003-03-31  Stephane Carrez  <stcarrez@nerim.fr>

	* config/m68hc11/m68hc11.c (hard_reg_operand): Check the mode.

2003-03-31  Stephane Carrez  <stcarrez@nerim.fr>

	* config/m68hc11/m68hc11.c (m68hc11_gen_movhi): Don't rely on REG_WAS_0