@@ -1,3 +1,8 @@
+2003-04-02  Richard Henderson  <rth@redhat.com>
+
+	* dwarf2out.c (output_call_frame_info): Ignore fde->nothrow as an
+	optimization when flag_exceptions not enabled.
+
 2003-04-01  Richard Henderson  <rth@redhat.com>
 
         * except.c (convert_from_eh_region_ranges_1): Smash REG_EH_REGION
